crates/wac-parser/tests/resolution/fail/export-dep-name.wac
package test:comp;

import f: func();
export f with "locked-dep=<foo:bar>";